--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,15 @@ h2 {
     color: white;
     height: 400px;
 }
+.designText {
+    display: none;
+}
+.developmentText {
+    display: none;
+}
+#productText {
+    display: none;
+}
 .footer {
     text-align: center;
 }
