--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ h2 {
     text-align: center;
 }
 .welcome {
-    background-image: url("backgrounds/h_img.jpg");
+    background-image: url("images/backgrounds/h_img.jpg");
     width: 100%;
     color: white; 
     background-size: cover;  
@@ -16,13 +16,13 @@ h2 {
     
 }
 .serv {
-    background-image: url("backgrounds/s_image.jpg");
+    background-image: url("images/backgrounds/s_image.jpg");
     width: 100%;
     color: white;
     height: 400px;
 }
 .cont {
-    background-image: url("backgrounds/c_image.jpg");
+    background-image: url("images/backgrounds/c_image.jpg");
     color: white;
     height: 400px;
 }
@@ -37,4 +37,8 @@ h2 {
 }
 .footer {
     text-align: center;
+}
+#img1, #img2, #img3, #img4, #img5, #img6, #img7, #img8 {
+    margin: 10px;
+    width: 100%;
 }
