--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,14 @@ h2 {
 
 }
 
-@media  screen and (max-width: 768px) {
-    
+@media  only screen and(min-width:480px){
+    body{
+        font-size: 12px;
+        width:50%;
+    }
+    [class*="col-"] {
+            width: 100%;
+    }
+
 }
+
